fixed nav-burger page jumping by setting label clip element to pos fixed

--- a/portfolio/assets/css/nav.styl
+++ b/portfolio/assets/css/nav.styl
@@ -123,7 +123,9 @@ Navigation Elements
 
 
 .nav-trigger 
-	position: absolute
+	position: fixed
+	top: 0
+	left: 0
 	clip: rect(0,0,0,0)
 
 
