--- a/portfolio/assets/css/type-hierarchy.styl
+++ b/portfolio/assets/css/type-hierarchy.styl
@@ -70,6 +70,9 @@ ol
 p
 	margin: 0
 	line-height: 1.75em
+	
+p::selection
+	background: yellow
 
 	
 
